@startuml
'https://plantuml.com/class-diagram

class RegistroClima {
    - fecha: LocalDateTime
    - clima: Clima
    - generoAlerta: Boolean
}

class Clima {
    - ubicacion: Ubicacion
    - temperatura: Double
    - humedad: Integer

    + esCondicionPeligrosa(): Boolean
}

record Ubicacion {
    - nombre: String
    - region: String
    - pais: String
}

record Notificacion {
    - destinatario: String
    - mensaje: String
}

record ResultadoEnvio {
    + exito(): ResultadoEnvio
    + falla(motivo: String): ResultadoEnvio
}

class Notificador {
    - adapter: CorreoAdapter

    + notificarAlerta(registroClima: RegistroClima, destinatarios: List<String>): void
}

interface CorreoAdapter {
    + enviar(notificacion: Notificacion): ResultadoEnvio
}

class SendGridCorreoAdapter {
    - adaptee: SendGridConnector

    + enviar(notificacion: Notificacion): ResultadoEnvio
}

class SendGridConnector {

    + enviarCorreoElectronico(destinatario: String, mensaje: String): void
}

class MockCorreoAdapter {
    - adaptee: MockConnector

    + enviar(notificacion: Notificacion): ResultadoEnvio
}

class MockConnector {

    + simularEnvio(destinatario: String, mensaje: String): void
}

interface ProveedorClimaAdapter {

    + obtenerClimaActual(): RegistroClima
}

class WeatherApiAdapter {
    - adaptee: WeatherApiRestClient

    + obtenerClimaActual(): RegistroClima
}

class WeatherApiRestClient {

    + buscarClimaActual()
}

RegistroClima -> Clima
Clima -> Ubicacion
Notificador .> RegistroClima
Notificador --> CorreoAdapter

CorreoAdapter ..> Notificacion
CorreoAdapter .> ResultadoEnvio

ResultadoEnvio .> ResultadoEnvio

CorreoAdapter <|.. SendGridCorreoAdapter
CorreoAdapter <|.. MockCorreoAdapter

MockCorreoAdapter --> MockConnector
SendGridCorreoAdapter --> SendGridConnector

RegistroClima <.. ProveedorClimaAdapter
ProveedorClimaAdapter <|.. WeatherApiAdapter
WeatherApiAdapter --> WeatherApiRestClient

@enduml